--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="description" content="An ambitious web and mobile developer" />
+    <meta name="keywords" content="web, mobile, developer, javascript, typescript, react, react native, nodejs, express, mongodb, jest, cypress, docker" />
+    <meta name="author" content="Denis Kuznetsov" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Page</title>
   </head>
