--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <link rel="icon" type="image/png" href="/icon.png" />
+    <link rel="fluid-icon" href="/icon.png" title="Denis Website"/>
+    <link rel="mask-icon" href="/icon.svg" color="#000000"/>
+    <link rel="apple-touch-icon" href="/icon.png" />
+    <link rel="apple-touch-icon" href="/icon-big.png" sizes="180x180"/>
     <meta name="description" content="An ambitious web and mobile developer" />
     <meta name="keywords" content="web, mobile, developer, javascript, typescript, react, react native, nodejs, express, mongodb, jest, cypress, docker" />
     <meta name="author" content="Denis Kuznetsov" />
