Scroll icon, added projects #deploy

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="keywords" content="web, mobile, developer, javascript, typescript, react, react native, nodejs, express, mongodb, jest, cypress, docker" />
     <meta name="author" content="Denis Kuznetsov" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Page</title>
+    <title>Denis' page</title>
   </head>
   <body>
     <div id="app"></div>
