--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Denis' page</title>
   </head>
-  <body>
+  <body class="overflow-x-hidden">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
